# cpp-Template

./: .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  README.md
include/project_name/: project_name.h
lib/: README.md
lib/header_only/: CMakeLists.txt
lib/header_only/include/header_only/: header_only.hpp
lib/source_files/: CMakeLists.txt
lib/source_files/include/source_files/: source_files.h
lib/source_files/src/: source_files.cpp
scripts/: run.ps1  run.sh
scripts/bash/: build.sh  run.sh  test.sh
scripts/ps/: build.ps1  run.ps1  test.ps1
src/: main.cpp  project_name.cpp
tests/: test_main.cpp
